--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10"
+    },
+    "dependencies": {
+        "babel-preset-latest": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1"
     }
 }
